--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Something Vegan</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    
 
 </head>
 
@@ -20,8 +21,8 @@
         <div class="col-4">
             <div class="card" id="searchOne" style="width: 18rem;">
                 <form class="form-inline">
-                    <input class="form-control mr-sm-2 search-input" type="search" placeholder="Recipe Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0 search-button" type="submit">Search</button>
+                    <input class="form-control mr-sm-2 recipe-search-input" type="search" placeholder="Recipe Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0 recipe-search-btn" type="button">Search</button>
                 </form>
                 <ul class="list-group list-group-flush search-history-list">
                 </ul>
@@ -30,8 +31,8 @@
             <div class="card" id="searchTwo" style="width: 18rem;" padding>
                 <form class="form-inline">
 
-                    <input class="form-control mr-sm-2 search-input" type="search" placeholder="Restaurant Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0 search-button" type="submit">Search</button>
+                    <input class="form-control mr-sm-2 ingredient-search-input" type="search" placeholder="Ingredient Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0 ingredient-search-btn"type="button">Search</button>
                 </form>
                 <ul class="list-group list-group-flush search-history-list-2">
                 </ul>
@@ -85,6 +86,7 @@
 
         </div>
     </div>
+    <script src='assets/js/script.js'></script>
 </body>
 
 </html>
