--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Restaurant finder</title>
+    <title>Something Vegan</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -21,19 +21,19 @@
                     <div class="form-container">
                         <form action="#" method="post">
                             <div class="top-sec">
-                                <input type="text" name="recipeSearch" id="recipeSearch" placeholder="Recipe Search">
-                                <button type="submit">Search</button>
+                                <input type="text" name="recipeSearch" class="recipe-search-input" id="recipeSearch" placeholder="Recipe Search">
+                                <button type="submit" class="recipe-search-btn">Search</button>
                             </div>
                             <button type="reset">Clear</button>
                         </form>
                     </div>
                 </div>
-                <div class="restaurant-search search">
+                <div class="cocktail-search search">
                     <div class="form-container">
                         <form action="#" method="post">
                             <div class="top-sec">
-                                <input type="text" name="restaurantSearch" id="restaurantSearch" placeholder="Restaurant Search">
-                                <button type="submit">Search</button>
+                                <input type="text" name="cocktailSearch" class="cocktail-search-input" id="cocktailSearch" placeholder="Cocktail Search">
+                                <button type="submit" class="cocktail-search-btn">Search</button>
                             </div>
                             <button type="reset">Clear</button>
                         </form>
@@ -88,6 +88,6 @@
         </div>
     </div>
 </div>
-
+<script src='./assets/js/script.js'></script>
 </body>
 </html>
