--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                 </div>
             </div>
-            <div class="search-result-container">
+            <div class="search-history">
                 <ul>
                     <li>Result</li>
                     <li>Result</li>
