Mohammad Update 07/08/2020 - 12:35 PM

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Vegan Restaurant Search</title>
+    <title>Vegan's Restaurant Search</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
