updated cards to fit

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="results-container">
                 <div class="title">Search Result</div>
                 <div class="result-sec">
-                    <ul>
+                    <ul id="unorder-list">
                         <li>
                             <div class="heading">Primary card title</div>
                             <p class="text">Some quick example text to build on the card title and make up the bulk of the card's content</p>
