udpated cards again

--- a/index.html
+++ b/index.html
@@ -59,28 +59,28 @@
                 <div class="result-sec">
                     <ul id="unorder-list">
                         <li>
-                            <div class="heading">Primary card title</div>
-                            <p class="text">Some quick example text to build on the card title and make up the bulk of the card's content</p>
+                            <div class="heading"></div>
+                            <p class="text"></p>
                         </li>
                         <li>
-                            <div class="heading">Primary card title</div>
-                            <p class="text">Some quick example text to build on the card title and make up the bulk of the card's content</p>
+                            <div class="heading"></div>
+                            <p class="text"></p>
                         </li>
                         <li>
-                            <div class="heading">Primary card title</div>
-                            <p class="text">Some quick example text to build on the card title and make up the bulk of the card's content</p>
+                            <div class="heading"></div>
+                            <p class="text"></p>
                         </li>
                         <li>
-                            <div class="heading">Primary card title</div>
-                            <p class="text">Some quick example text to build on the card title and make up the bulk of the card's content</p>
+                            <div class="heading"></div>
+                            <p class="text"></p>
                         </li>
                         <li>
-                            <div class="heading">Primary card title</div>
-                            <p class="text">Some quick example text to build on the card title and make up the bulk of the card's content</p>
+                            <div class="heading"></div>
+                            <p class="text"></p>
                         </li>
                         <li>
-                            <div class="heading">Primary card title</div>
-                            <p class="text">Some quick example text to build on the card title and make up the bulk of the card's content</p>
+                            <div class="heading"></div>
+                            <p class="text"></p>
                         </li>
                     </ul>
                 </div>
