omg it's finished

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                         </form>
                     </div>
                 </div>
+            </div>
+            <div class="recipe-search-history"></div>
+            <div class="search-container">
                 <div class="cocktail-search search">
                     <div class="form-container">
                         <form action="#" method="post">
@@ -40,18 +43,7 @@
                     </div>
                 </div>
             </div>
-            <div class="search-history">
-                <ul>
-                    <li>Result</li>
-                    <li>Result</li>
-                    <li>Result</li>
-                    <li>Result</li>
-                    <li>Result</li>
-                    <li>Result</li>
-                    <li>Result</li>
-                    <li>Result</li>
-                </ul>
-            </div>
+            <div class="cocktail-search-history"></div>
         </div>
         <div class="right-col">
             <div class="results-container">
@@ -59,28 +51,12 @@
                 <div class="result-sec">
                     <ul id="unorder-list">
                         <li>
-                            <div class="heading"></div>
-                            <p class="text"></p>
-                        </li>
-                        <li>
-                            <div class="heading"></div>
-                            <p class="text"></p>
-                        </li>
-                        <li>
-                            <div class="heading"></div>
-                            <p class="text"></p>
-                        </li>
-                        <li>
-                            <div class="heading"></div>
-                            <p class="text"></p>
-                        </li>
-                        <li>
-                            <div class="heading"></div>
-                            <p class="text"></p>
-                        </li>
-                        <li>
-                            <div class="heading"></div>
-                            <p class="text"></p>
+                            <div class="heading">
+                                <h2>Welcome to Something Vegan!</h2>
+                            </div>
+                            <p class="text">
+                                Your vegan recipe and cocktail journey starts here.
+                            </p>
                         </li>
                     </ul>
                 </div>
